--- a/client/src/components/Homepage.scss
+++ b/client/src/components/Homepage.scss
@@ -5,3 +5,10 @@
     width: 500px;
     text-align: center;
 }
+
+
+h3 {
+    padding: 250px 0;
+    // border: 3px solid green;
+    text-align: center;
+}
