added on change to save values on State hook

--- a/client/src/components/Tacdb.scss
+++ b/client/src/components/Tacdb.scss
@@ -15,6 +15,17 @@
   display: none;
 }
 
+.green {
+  color: green;
+}
+
+.orange {
+  color: orange;
+}
+
+.red {
+  color: red;
+}
 .filterContainer {
   position: sticky;
   top: 70px;
