--- a/client/src/components/common/Form.scss
+++ b/client/src/components/common/Form.scss
@@ -1,10 +1,10 @@
 
 .add-form {
     text-align: center;
-    border: 2px solid red;
+    // border: 2px solid red;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    // margin-top: 50px;
 }
 
 
