--- a/client/src/designSystems/Table/Table.css
+++ b/client/src/designSystems/Table/Table.css
@@ -44,7 +44,7 @@
     text-align: center;
   }
   @media screen and (max-width: 1025px) {
-    table thead {
+    .wrapper table thead {
       display: none;
     }
     thead,
