--- a/client/src/components/Homepage.scss
+++ b/client/src/components/Homepage.scss
@@ -1,14 +1,20 @@
 .homeContainer {
     margin-left: auto;
     margin-right: auto;
-    margin-top: 150px;
-    width: 500px;
+    margin-top: 80px;
+    width: 100%;
     text-align: center;
 }
 
-
-h3 {
-    padding: 250px 0;
+h1 {
+    padding: 50px 0;
+}
+h2 {
+    padding: 25px 0;
+}
+.notification-container {
+    margin-top: 300px;
+    // padding-bottom: 350px;
     // border: 3px solid green;
     text-align: center;
 }
